// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form snapshot tests should render snanpshot 1`] = `
<styled.div
  isHidden={true}
>
  <styled.form
    className="second-style"
    isHidden={true}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      type="text"
      value=""
    />
    <styled.button
      isHidden={true}
    >
      <i
        className="fas fa-search"
      />
    </styled.button>
  </styled.form>
</styled.div>
`;

exports[`Form snapshot tests should render snanpshot with false 1`] = `
<styled.div
  isHidden={false}
>
  <styled.form
    className="second-style"
    isHidden={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      type="text"
      value=""
    />
    <styled.button
      isHidden={false}
    >
      <i
        className="fas fa-search"
      />
    </styled.button>
  </styled.form>
</styled.div>
`;
